--- a/main.css
+++ b/main.css
@@ -19,6 +19,7 @@
     --status-bg-color: #9bc1bc;
     --btn-close-bg-color: #ee7464;
     --border-radius: 10px;
+    --thead-color: #999999;
 }
 
 body {
@@ -40,7 +41,7 @@ body {
     position: relative;
     overflow: hidden;
     border-radius: var(--border-radius);
-    padding: 0.5rem 2rem;
+    padding: 0.5rem 2rem 4rem;
 
     display: flex;
     flex-direction: column;
@@ -78,17 +79,24 @@ h1 {
     width: 100%;
     border-radius: var(--border-radius);
     box-shadow: 4px 4px 8px 0 rgba(0, 0, 0, 0.05);
-    padding: 2rem 0;
+    padding: 4rem 0;
+}
+
+.input-container {
+    gap: 3rem;
+}
+
+input:not([readonly]) {
+    border-bottom: 1px solid black;
+    border-radius: 0;
 }
 
 .input-container input[type="text"] {
-    border-bottom: 1px solid black;
     font-size: 1.1rem;
     width: 63%;
 }
 
 .input-container input[type="datetime-local"] {
-    border-bottom: 1px solid black;
     font-size: 1rem;
     width: 63%;
 }
@@ -104,6 +112,7 @@ h1 {
 
 .todo-list {
     margin: 0.5rem auto;
+    padding-bottom: 6rem;
 }
 
 table {
@@ -119,11 +128,12 @@ caption {
 
 thead {
     background: var(--table-header-bg-color);
+    color: var(--thead-color);
 }
 
 td {
     text-align: center;
-    padding: 1rem;
+    padding: 0.7rem 0.1rem;
 }
 
 tbody tr {
@@ -132,4 +142,29 @@ tbody tr {
 
 tbody input, tbody select {
     text-align: center;
+    font-size: 1rem;
+    border-radius: 5px;
+    padding: 0.4rem 0;
+}
+
+tbody select {
+    color: white;
+    background-color: var(--status-bg-color);
+    box-shadow: 0 8px 20px 0 #9bc1bc61;
+}
+
+button, select {
+    cursor: pointer;
+}
+
+.delete-btn {
+    background-color: transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20px;
+    padding: 0.2rem;
+    border-radius: 50%;
+    margin: 0 auto;
+    box-shadow: 0 8px 20px 0 #ff00002e;
 }
