--- a/main.css
+++ b/main.css
@@ -25,10 +25,8 @@
 body {
     font-family: Arial, sans-serif;
     background-color: var(--body-bg-color);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 80vh;
+    min-height: 100vh;
+    padding-bottom: 5rem;
 }
 
 .todo-container > * {
@@ -37,12 +35,10 @@ body {
 }
 
 .todo-container {
-    width: 70%;
     position: relative;
     overflow: hidden;
     border-radius: var(--border-radius);
     padding: 0.5rem 2rem 4rem;
-
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -50,6 +46,8 @@ body {
     gap: 0.8rem;
     background-color: var(--container-bg-color);
     box-shadow: 4px 4px 8px 0 rgba(0, 0, 0, 0.05);
+    width: 80%;
+    margin: 5rem auto;
 }
 
 .todo-container:before {
@@ -115,45 +113,37 @@ input:not([readonly]) {
     padding-bottom: 6rem;
 }
 
-table {
+.todo-in-container {
     width: 100%;
 }
 
-caption {
+h1 {
     text-align: left;
     font-weight: 700;
     font-size: 1.3rem;
     padding: 1rem;
 }
 
-thead {
-    background: var(--table-header-bg-color);
-    color: var(--thead-color);
-}
 
-td {
+p {
     text-align: center;
     padding: 0.7rem 0.1rem;
 }
 
-tbody tr {
-    border-bottom: 1px solid var(--table-tr-border-color);
-}
-
-tbody input, tbody select {
+.todo-in-container input, .todo-in-container select {
     text-align: center;
     font-size: 1rem;
     border-radius: 5px;
     padding: 0.4rem 0;
 }
 
-tbody select {
+.todo-in-container select {
     color: white;
     background-color: var(--status-bg-color);
     box-shadow: 0 8px 20px 0 #9bc1bc61;
 }
 
-button, select {
+button, select, input[readonly] {
     cursor: pointer;
 }
 
@@ -162,9 +152,30 @@ button, select {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 20px;
-    padding: 0.2rem;
-    border-radius: 50%;
-    margin: 0 auto;
+    width: 25px;
+    padding: 0.3rem;
+    border-radius: 5px;
     box-shadow: 0 8px 20px 0 #ff00002e;
+}
+
+.todo-in-container > div {
+    display: grid;
+    grid-template-columns: auto minmax(200px, 250px) minmax(120px, 15%) 32px;
+    border-bottom: 1px solid var(--table-tr-border-color);
+    padding: 1rem;
+    gap: 1rem;
+}
+
+@media only screen and (max-width: 860px) {
+    .todo-in-container > div {
+        grid-template-columns: auto;
+    }
+
+    .todo-container {
+        width: 90%;
+    }
+
+    .delete-btn {
+        width: 30px;
+    }
 }
